优化命令